noinst_LIBRARIES = libnds_common.a
libnds_common_a_SOURCES = biosCalls.s biosCalls.twl.s card.c		\
cardEeprom.c debugprint.s fifosystem.c interruptDispatcher.s		\
interrupts.c libnds_exit.arm.c reset.c rsa.c sha1.c swiSoftReset.s	\
syscalls.c systemReset.c timers.c

AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/common
